docs/api/qiskit/0.35/qiskit.visualization.pulse_v2.IQXDebugging.mdx
---
title: IQXDebugging (v0.35)
description: API reference for qiskit.visualization.pulse_v2.IQXDebugging in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.visualization.pulse_v2.IQXDebugging
---

# IQXDebugging

<Class id="qiskit.visualization.pulse_v2.IQXDebugging" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/visualization/pulse_v2/stylesheet.py" signature="IQXDebugging(**kwargs)" modifiers="class">
  Bases: `dict`

  Pulse stylesheet for pulse programmers. Show details of instructions.

  \# TODO: add more generators

  *   Generate stepwise waveform envelope with latex pulse names.
  *   Generate annotation for waveform height.
  *   Apply phase modulation to waveforms.
  *   Plot frame change symbol with raw operand values.
  *   Show chart name and channel frequency.
  *   Show snapshot and barrier.
  *   Show acquire channels.
  *   Channels are sorted by index and control channels are added to the end.

  ## Methods

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-clear" />

  ### clear

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.clear" signature="IQXDebugging.clear() → None. Remove all items from D." />

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-copy" />

  ### copy

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.copy" signature="IQXDebugging.copy() → a shallow copy of D" />

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-fromkeys" />

  ### fromkeys

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.fromkeys" signature="IQXDebugging.fromkeys(value=None, /)">
    Create a new dictionary with keys from iterable and values set to value.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-get" />

  ### get

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.get" signature="IQXDebugging.get(key, default=None, /)">
    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-items" />

  ### items

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.items" signature="IQXDebugging.items() → a set-like object providing a view on D’s items" />

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-keys" />

  ### keys

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.keys" signature="IQXDebugging.keys() → a set-like object providing a view on D’s keys" />

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-pop" />

  ### pop

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.pop" signature="IQXDebugging.pop(k[, d]) → v, remove specified key and return the corresponding value.">
    If key is not found, d is returned if given, otherwise KeyError is raised
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-popitem" />

  ### popitem

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.popitem" signature="IQXDebugging.popitem()">
    Remove and return a (key, value) pair as a 2-tuple.

    Pairs are returned in LIFO (last-in, first-out) order. Raises KeyError if the dict is empty.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-setdefault" />

  ### setdefault

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.setdefault" signature="IQXDebugging.setdefault(key, default=None, /)">
    Insert key with a value of default if key is not in the dictionary.

    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-update" />

  ### update

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.update" signature="IQXDebugging.update([E, ]**F) → None. Update D from dict/iterable E and F.">
    If E is present and has a .keys() method, then does: for k in E: D\[k] = E\[k] If E is present and lacks a .keys() method, then does: for k, v in E: D\[k] = v In either case, this is followed by: for k in F: D\[k] = F\[k]
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxdebugging-values" />

  ### values

  <Function id="qiskit.visualization.pulse_v2.IQXDebugging.values" signature="IQXDebugging.values() → an object providing a view on D’s values" />
</Class>

